--- a/lab1/index.html
+++ b/lab1/index.html
@@ -159,8 +159,10 @@
          </div>
          <div class="content-window" id="tab-6">
             <div class="text">
-               <p> 
+               <p class="download"> 
                   <a href="https://github.com/FeltMe/ZooClinic" target="blink">Посилання на Github з проектом</a>
+                  <br>
+                  <a href="project/project.exe" download="">Завантажити Project.exe</a>
                </p>
             </div>
          </div>
