--- a/lab2/index.html
+++ b/lab2/index.html
@@ -133,8 +133,7 @@
          </div>
          <div class="content-window" id="drop-2">
             <div class="text">
-               <img src="sources/img/umldiag1.png" alt="">
-               <img src="sources/img/umldiag2.png" alt="">
+               <img src="sources/img/photo_2021-03-12_16-38-37.jpg" alt="">
             </div>
 
          </div>
