--- a/lab1/index.html
+++ b/lab1/index.html
@@ -58,7 +58,7 @@
          <div class="content-window" id="total">
             <div class="text">
                <p>
-                  На лабораторній роботі я описала предметну галузь, зробила лексично-семантичний аналіз опису об'єкта управління(таблицю обґрунтування класів і таблицю обґрунтування методів), побудувала діаграму use-case і діаграму класів
+                  На лабораторній роботі ми описали предметну галузь, зробили лексично-семантичний аналіз опису об'єкта управління(таблицю обґрунтування класів і таблицю обґрунтування методів), побудували діаграму use-case і діаграму класів
                </p>
             </div>
          </div>
