--- a/lab3/index.html
+++ b/lab3/index.html
@@ -98,7 +98,10 @@
          <div class="content-window" id="total">
             <div class="text">
                <p>
-                  total
+                  На даній лабораторній роботі ми здійснили введення та виведення даних закритих полів класів, застосовуючи методи-властивості. Також ми визначили основні переваги методів-властивостей: <br> <br>
+•  забезпечується більш раціональний та природній доступ до внутрішніх змінних класу; <br> <br>
+•  в коді аксесорів можна реалізовувати різного роду перевірки на допустимість значень внутрішніх змінних класу; <br> <br>
+•  гнучкість у правах доступа до внутрішньої змінної: відсутність аксесора set дозволяє реалізувати доступ “тільки для читання” для частини внутрішніх даних класу. Це, в свою чергу, унеможливлює випадкову зміну цих даних. 
                </p>
             </div>
          </div>
@@ -128,7 +131,7 @@
          </div>
          <div class="content-window" id="drop-1">
             <div class="text">
-              <p>drop-1</p>
+              <img src="sources/img/uml-diag.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-2">
@@ -148,7 +151,9 @@
          </div>
          <div class="content-window" id="drop-5">
             <div class="text">
-               <p>drop-5</p>
+               <p class="download"> 
+                  <a href="https://github.com/FeltMe/ZooClinic" target="blink">Посилання на Github з проектом</a>
+               </p>
             </div>
          </div>
          <div class="content-window" id="drop-6">
