--- a/lab2/index.html
+++ b/lab2/index.html
@@ -27,7 +27,7 @@
       <nav>
          <div class="nav-element"><a href="../lab1/index.html">Лабораторна 1</a></div>
          <div class="nav-element"><a href="index.html">Лабораторна 2</a></div>
-         <div class="nav-element hidden"><a href="../lab3/index.html">Лабораторна 3</a></div>
+         <div class="nav-element "><a href="../lab3/index.html">Лабораторна 3</a></div>
          <div class="nav-element hidden"><a href="../lab4/index.html">Лабораторна 4</a></div>
 	      <div class="nav-element hidden"><a href="../lab5/index.html">Лабораторна 5</a></div>
          <div class="nav-element hidden"><a href="../lab6/index.html">Лабораторна 6</a></div>
