--- a/lab2/index.html
+++ b/lab2/index.html
@@ -133,7 +133,7 @@
          </div>
          <div class="content-window" id="drop-2">
             <div class="text">
-               <img src="sources/img/uml-diagram.jpg" alt="">
+               <img src="sources/img/uml-diag.jpg" alt="">
             </div>
 
          </div>
