--- a/lab3/index.html
+++ b/lab3/index.html
@@ -141,7 +141,7 @@
          </div>
          <div class="content-window" id="drop-3">
             <div class="text">
-               <p>drop-3</p>
+               <img src="sources/img/project_structure.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-4">
