--- a/lab1/index.html
+++ b/lab1/index.html
@@ -21,7 +21,7 @@
             <p class="title">Звіти з лабораторних робіт</p> <br>
             <p class="title">з дисципліни «Основи розробки програмного забезпечення на платформі .NET»</p>
             <br>
-            <p>Роботу виконали <a href="../index.html">студенти</a> групи <b>ІА-93</b></p>
+            <p>Роботу виконали студенти групи <b>ІА-93</b></p>
          </div>
       </header>
       <nav>
