--- a/lab3/index.html
+++ b/lab3/index.html
@@ -158,7 +158,7 @@
          </div>
          <div class="content-window" id="drop-6">
             <div class="text">
-               <p>drop-6</p>
+               <img src="sources/img/start_exe.jpg" alt="">
             </div>
          </div>
 
