--- a/lab3/index.html
+++ b/lab3/index.html
@@ -158,7 +158,9 @@
          </div>
          <div class="content-window" id="drop-6">
             <div class="text">
-               <img src="sources/img/start_exe.jpg" alt="">
+		<a href="project/project.exe" download="">Завантажити Project.exe</a>
+		<br>
+		<img src="sources/img/start_exe.jpg" alt="">
             </div>
          </div>
 
