--- a/lab3/index.html
+++ b/lab3/index.html
@@ -65,7 +65,7 @@
                   </svg>
                </div>
                <div class="container">
-                  <div class="drop-bar" onclick="toggle('drop-2')">Класи з описом властивостей закритих полів</div>
+                  <div class="drop-bar" onclick="toggle('drop-2')" style="display: none;">Класи з описом властивостей закритих полів</div>
                   <div class="drop-bar" onclick="toggle('drop-3')">Файлова структура проекту</div>
                   <div class="drop-bar" onclick="toggle('drop-4')">Код всіх файлів та результат програми</div>
                </div>
