--- a/lab4/index.html
+++ b/lab4/index.html
@@ -98,7 +98,9 @@
          <div class="content-window" id="total">
             <div class="text">
                <p>
-                  total
+                  В данній лабораторній роботі, ми навчилися створювати реалізацію методів перевантаження унарних, бінарних, логічних операторів, операторів порівняння на платформі .NET. 
+Також ми відпрацювали матеріал перевантаження операторів та зрозуміли їх переваги.  
+
                </p>
             </div>
          </div>
