--- a/lab4/index.html
+++ b/lab4/index.html
@@ -134,7 +134,7 @@
          </div>
          <div class="content-window" id="drop-3">
             <div class="text">
-               <p>drop-3</p>
+               <img src="sources/img/file-strctr.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-4">
