--- a/lab4/index.html
+++ b/lab4/index.html
@@ -140,44 +140,44 @@
          </div>
          <div class="content-window" id="drop-4">
             <div class="text">
-               <p>static public Patient operator ++(Patient pat)<br>
-		{<br>
-			pat.Age++;<br>
-			return pat;<br>
+               <pre>static public Patient operator ++(Patient pat)
+		{
+			pat.Age++;
+			return pat;
 		}
-</p>
+</pre>
             </div>
          </div>
          <div class="content-window" id="drop-5">
             <div class="text">
-               <p>static public Cabinet operator ~(Cabinet cab)<br>
-		{<br>
-			cab.Status = !cab.Status;<br>
-			return cab;<br>
+               <pre>static public Cabinet operator ~(Cabinet cab)
+		{
+			cab.Status = !cab.Status;
+			return cab;
 		}
-</p>
+</pre>
             </div>
          </div>
          <div class="content-window" id="drop-6">
             <div class="text">
-               <p>// logichniy
-		static public Person operator ^(Person per1, Person per2)<br>
-		{<br>
-			return new Person(per1.Name, per1.Surname, per1.Age ^ per2.Age, per1.Birthday);<br>
+               <pre>// logichniy
+		static public Person operator ^(Person per1, Person per2)
+		{
+			return new Person(per1.Name, per1.Surname, per1.Age ^ per2.Age, per1.Birthday);
 
-		}<br>
-// porivnyanya<br>
-		static public bool operator <(MedicalStaff med1, MedicalStaff med2)<br>
-		{<br>
-			return med1.Cabinet < med2.Cabinet;<br>
-		}<br>
-
-// porivnyanya<br>
-		static public bool operator >(MedicalStaff med1, MedicalStaff med2)<br>
-		{<br>
-			return med1.Cabinet > med2.Cabinet;<br>
 		}
-</p>
+// porivnyanya
+		static public bool operator <(MedicalStaff med1, MedicalStaff med2)
+		{
+			return med1.Cabinet < med2.Cabinet;
+		}
+
+// porivnyanya
+		static public bool operator >(MedicalStaff med1, MedicalStaff med2)
+		{
+			return med1.Cabinet > med2.Cabinet;
+		}
+</pre>
             </div>
          </div>
          <div class="content-window" id="drop-7">
