--- a/lab4/index.html
+++ b/lab4/index.html
@@ -187,7 +187,7 @@
          </div>
 	 <div class="content-window" id="drop-8">
             <div class="text">
-               <p>drop-8</p>
+                <img src="sources/img/prog.jpg" alt="">
             </div>
          </div>
 	 
