--- a/lab4/index.html
+++ b/lab4/index.html
@@ -145,7 +145,8 @@
 			pat.Age++;
 			return pat;
 		}
-</pre>
+		</pre>
+		<img src="sources/img/unarniy.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-5">
@@ -155,7 +156,8 @@
 			cab.Status = !cab.Status;
 			return cab;
 		}
-</pre>
+		</pre>
+		<img src="sources/img/binary.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-6">
@@ -177,7 +179,9 @@
 		{
 			return med1.Cabinet > med2.Cabinet;
 		}
-</pre>
+		</pre>
+		<img src="sources/img/logichniy.jpg" alt="">
+		<img src="sources/img/porivniannia.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-7">
