--- a/lab4/index.html
+++ b/lab4/index.html
@@ -186,7 +186,9 @@
          </div>
          <div class="content-window" id="drop-7">
             <div class="text">
-               <p>drop-7</p>
+               <p class="download"> 
+                  <a href="https://github.com/FeltMe/ZooClinic" target="blink">Посилання на Github з проектом</a>
+               </p>
             </div>
          </div>
 	 <div class="content-window" id="drop-8">
