--- a/lab4/index.html
+++ b/lab4/index.html
@@ -50,7 +50,7 @@
                   </svg>
                </div>
                <div class="container">
-                  <div class="drop-bar" onclick="toggle('drop-1')">Таблиця класів</div>
+                  <div class="drop-bar" onclick="toggle('drop-1') style="display: none;"">Таблиця класів</div>
                   <div class="drop-bar" onclick="toggle('drop-2')">UML-діагарма класів</div>
                </div>
             </div>
