--- a/lab4/index.html
+++ b/lab4/index.html
@@ -130,7 +130,7 @@
          </div>
          <div class="content-window" id="drop-2">
             <div class="text">
-               <p>drop-2</p>
+               <img src="sources/img/uml-diag.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-3">
