--- a/lab4/index.html
+++ b/lab4/index.html
@@ -99,7 +99,7 @@
          <div class="content-window" id="total">
             <div class="text">
                <p>
-                  В данній лабораторній роботі, ми навчилися створювати реалізацію методів перевантаження унарних, бінарних, логічних операторів, операторів порівняння на платформі .NET. 
+                  У даній лабораторній роботі, ми навчилися створювати реалізацію методів перевантаження унарних, бінарних, логічних операторів, операторів порівняння на платформі .NET. 
 Також ми відпрацювали матеріал перевантаження операторів та зрозуміли їх переваги.  
 
                </p>
