--- a/lab4/index.html
+++ b/lab4/index.html
@@ -188,6 +188,8 @@
             <div class="text">
                <p class="download"> 
                   <a href="https://github.com/FeltMe/ZooClinic" target="blink">Посилання на Github з проектом</a>
+		  
+	       Середовище розробки Visual Studio  
                </p>
             </div>
          </div>
