--- a/lab4/index.html
+++ b/lab4/index.html
@@ -187,9 +187,8 @@
          <div class="content-window" id="drop-7">
             <div class="text">
                <p class="download"> 
-                  <a href="https://github.com/FeltMe/ZooClinic" target="blink">Посилання на Github з проектом</a>
-		  
-	       Середовище розробки Visual Studio  
+                  <a href="https://github.com/FeltMe/ZooClinic" target="blink">Посилання на Github з проектом</a><br>
+	          Середовище розробки Visual Studio  
                </p>
             </div>
          </div>
