--- a/lab5/index.html
+++ b/lab5/index.html
@@ -119,8 +119,8 @@
                   
                   Постановка задачі: <br> <br>
       
-                     1.Доповнити програмну реалізацію класів методами для перевантаження унарних, бінарних, логічних операторів, операторів порівняння.<br>
-		     2.Протестувати програму. Зробити висновки.
+                     1. Доповнити програмну реалізацію класів методами для перевантаження унарних, бінарних, логічних операторів, операторів порівняння.<br>
+		     2. Протестувати програму. Зробити висновки.
          		</p>
             </div>
          </div>
@@ -136,7 +136,7 @@
          </div>
          <div class="content-window" id="drop-3">
             <div class="text">
-               drop-3
+               <img src="sources/img/file-strctr.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-4">
