--- a/lab5/index.html
+++ b/lab5/index.html
@@ -26,7 +26,7 @@
       </header>
       <nav>
          <div class="nav-element"><a href="../lab1/index.html">Лабораторна 1</a></div>
-         <div class="nav-element"><a href="index.html">Лабораторна 2</a></div>
+         <div class="nav-element"><a href="../lab2/index.html">Лабораторна 2</a></div>
          <div class="nav-element"><a href="../lab3/index.html">Лабораторна 3</a></div>
          <div class="nav-element"><a href="../lab4/index.html">Лабораторна 4</a></div>
 	      <div class="nav-element"><a href="../lab5/index.html">Лабораторна 5</a></div>
