--- a/lab5/index.html
+++ b/lab5/index.html
@@ -149,7 +149,7 @@
          </div>
          <div class="content-window" id="drop-5">
             <div class="text">
-               drop-5
+               <img src="sources/img/DowncastingUpcasting.jpg" alt="">
                <pre>
 		</pre>
 		<img src="sources/img/binary.jpg" alt="">
