--- a/lab5/index.html
+++ b/lab5/index.html
@@ -141,9 +141,14 @@
          </div>
          <div class="content-window" id="drop-4">
             <div class="text">
-               drop-4
-               <pre>
-		</pre>
+               Базові
+               <img src="sources/img/Person.jpg" alt="">
+               <img src="sources/img/MedicalBasic.jpg" alt="">
+               <img src="sources/img/Room.jpg" alt="">
+               Похідні
+               <img src="sources/img/Patient.jpg" alt="">
+               <img src="sources/img/MedicalStaff.jpg" alt="">
+               <img src="sources/img/Cabinet.jpg" alt="">
 		<img src="sources/img/unarniy.jpg" alt="">
             </div>
          </div>
