--- a/lab5/index.html
+++ b/lab5/index.html
@@ -99,8 +99,9 @@
          <div class="content-window" id="total">
             <div class="text">
                <p>
-                  У даній лабораторній роботі, ми навчилися створювати реалізацію методів перевантаження унарних, бінарних, логічних операторів, операторів порівняння на платформі .NET. 
-Також ми відпрацювали матеріал перевантаження операторів та зрозуміли їх переваги.  
+                  У даній лабораторній роботі, ми придбали практичні навички роботи  створення базовового та похідних класів, перевизначення методів у класі, методів перевантаження унарних, бінарних, логічних операторів, операторів порівняння.
+
+ 
 
                </p>
             </div>
