--- a/lab5/index.html
+++ b/lab5/index.html
@@ -101,8 +101,6 @@
                <p>
                   У даній лабораторній роботі, ми придбали практичні навички роботи  створення базовового та похідних класів, перевизначення методів у класі, методів перевантаження унарних, бінарних, логічних операторів, операторів порівняння.
 
- 
-
                </p>
             </div>
          </div>
@@ -132,7 +130,7 @@
          </div>
          <div class="content-window" id="drop-2">
             <div class="text">
-               drop-2
+               <img src="sources/img/uml-diag.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-3">
