--- a/lab5/index.html
+++ b/lab5/index.html
@@ -68,7 +68,7 @@
                   <div class="drop-bar" onclick="toggle('drop-3')">Файлова структура проекту</div>
                   <div class="drop-bar" onclick="toggle('drop-4')">Базові та похідні класи.<br> Абстрактні класи та віртуальні методи</div>
                   <div class="drop-bar" onclick="toggle('drop-5')">Upcasting - Downcasting</div>
-		  <div class="drop-bar" onclick="toggle('drop-6')">Інтерфейси.<br>Узагальнені класи і методи</div>	  
+		  <div class="drop-bar" onclick="toggle('drop-6')">Інтерфейси</div>	  
                </div>
             </div>
             <div class="drop-out">
@@ -161,7 +161,7 @@
          </div>
          <div class="content-window" id="drop-6">
             <div class="text">
-               drop-6
+               <img src="sources/img/interface.jpg" alt="">
                <pre>
 		</pre>
 		<img src="sources/img/logichniy.jpg" alt="">
