--- a/lab5/index.html
+++ b/lab5/index.html
@@ -66,7 +66,7 @@
                </div>
                <div class="container">
                   <div class="drop-bar" onclick="toggle('drop-3')">Файлова структура проекту</div>
-                  <div class="drop-bar" onclick="toggle('drop-4')">Базові та похідні класи.<br> Абстрактні класи та віртуальні методи</div>
+                  <div class="drop-bar" onclick="toggle('drop-4')">Базові та похідні класи.<br> Абстрактні класи</div>
                   <div class="drop-bar" onclick="toggle('drop-5')">Upcasting - Downcasting</div>
 		  <div class="drop-bar" onclick="toggle('drop-6')">Інтерфейси</div>	  
                </div>
