--- a/lab5/index.html
+++ b/lab5/index.html
@@ -66,7 +66,7 @@
                </div>
                <div class="container">
                   <div class="drop-bar" onclick="toggle('drop-3')">Файлова структура проекту</div>
-                  <div class="drop-bar" onclick="toggle('drop-4')">Базові та похідні класи.<br> Абстрактні класи</div>
+                  <div class="drop-bar" onclick="toggle('drop-4')">Базові та похідні класи.<br> Абстрактні класи та віртуальні методи</div>
                   <div class="drop-bar" onclick="toggle('drop-5')">Upcasting - Downcasting</div>
 		  <div class="drop-bar" onclick="toggle('drop-6')">Інтерфейси</div>	  
                </div>
@@ -162,10 +162,7 @@
          <div class="content-window" id="drop-6">
             <div class="text">
                <img src="sources/img/interface.jpg" alt="">
-               <pre>
-		</pre>
-		<img src="sources/img/logichniy.jpg" alt="">
-		<img src="sources/img/porivniannia.jpg" alt="">
+               
             </div>
          </div>
          <div class="content-window" id="drop-7">
@@ -178,7 +175,8 @@
          </div>
 	 <div class="content-window" id="drop-8">
             <div class="text">
-               drop-8
+               <img src="sources/img/prog.jpg" alt="">
+               <a href="project/project.exe" download="">Завантажити Project.exe</a>
             </div>
          </div>
 	 
