--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
          <div class="nav-element "><a href="lab3/index.html">Лабораторна 3</a></div>
          <div class="nav-element"><a href="lab4/index.html">Лабораторна 4</a></div>
 	      <div class="nav-element"><a href="lab5/index.html">Лабораторна 5</a></div>
-         <div class="nav-element hidden"><a href="lab6/index.html">Лабораторна 6</a></div>
-         <div class="nav-element hidden"><a href="lab7/index.html">Лабораторна 7</a></div>
+         <div class="nav-element"><a href="lab6/index.html">Лабораторна 6</a></div>
+         <div class="nav-element"><a href="lab7/index.html">Лабораторна 7</a></div>
          <div class="nav-element hidden"><a href="lab8/index.html">Лабораторна 8</a></div>
          <div class="nav-element hidden"><a href="lab9/index.html">Лабораторна 9</a></div>
          
