--- a/index.html
+++ b/index.html
@@ -41,43 +41,43 @@
          <div class="name"> 
             <p>Візняк Максим Богданович</p>
             <p>Студент 2-го курсу ФІОТ</p>
-            <p>Номер заліковки</p>
+            <p>Відповідальний за звіт і його оформлення</p>
          </div>
       </div>
       <div class="portfolio">
          <div class="photo">
-            <a href="#" target="blink">
+            <a href="https://www.instagram.com/feltq/?hl=uk" target="blink">
             <img src="source/image/Sanek.jpg">
             </a>
          </div>
          <div class="name"> 
             <p>Дроздюк Олександр Вікторович</p>
             <p>Студент 2-го курсу ФІОТ</p>
-            <p>Номер заліковки</p>
+            <p>Головний по .NET</p>
          </div>
       </div>
       <div class="portfolio">
          <div class="photo">
-            <a href="#" target="blink">
+            <a href="https://www.instagram.com/khrystyna_ambroziak/?hl=uk" target="blink">
             <img src="source/image/Khristina.jpg">
             </a>
          </div>
          <div class="name"> 
             <p>Амброзяк Христина Андріївна</p>
             <p>Студентка 2-го курсу ФІОТ</p>
-            <p>Номер заліковки</p>
+            <p>Розробник .NET</p>
          </div>
       </div>
       <div class="portfolio">
          <div class="photo">
-            <a href="#" target="blink">
+            <a href="https://www.instagram.com/kamapuliaa/?hl=uk" target="blink">
             <img src="source/image/Kamila.jpg">
             </a>
          </div>
          <div class="name"> 
             <p>Палій Каміла Юріївна</p>
             <p>Студентка 2-го курсу ФІОТ</p>
-            <p>Номер заліковки</p>
+            <p>Project lead</p>
          </div>
       </div>
    </section>
