--- a/lab7/index.html
+++ b/lab7/index.html
@@ -42,12 +42,6 @@
             <div class="drop-out">
                <div class="drop-down">
                   <p>Проектування структури ПЗ</p>
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                     width="25" viewBox="0 0 32 32">
-                     <path class="svg" d="M28.2,1.7l-1.4-1.4C26.6,0.1,26.4,0,26.1,0c-0.2,0-0.5,0.1-0.7,0.3L14.2,11.5L3,0.3C2.8,0.1,2.6,0,2.4,0
-                           C2.1,0,1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.1,0,2.4C0,2.6,0.1,2.8,0.3,3l13.3,13.3c0.2,0.2,0.4,0.3,0.7,0.3c0.2,0,0.5-0.1,0.7-0.3
-                           L28.2,3c0.2-0.2,0.3-0.4,0.3-0.7C28.5,2.1,28.4,1.9,28.2,1.7z" />
-                  </svg>
                </div>
                <div class="container">
                   <div class="drop-bar" onclick="toggle('drop-1')" style="display: none;">Таблиця класів</div>
@@ -57,12 +51,6 @@
             <div class="drop-out">
                <div class="drop-down">
                   <p>Кодування ПЗ (програмування)</p>
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                     width="25" viewBox="0 0 32 32">
-                     <path class="svg" d="M28.2,1.7l-1.4-1.4C26.6,0.1,26.4,0,26.1,0c-0.2,0-0.5,0.1-0.7,0.3L14.2,11.5L3,0.3C2.8,0.1,2.6,0,2.4,0
-                           C2.1,0,1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.1,0,2.4C0,2.6,0.1,2.8,0.3,3l13.3,13.3c0.2,0.2,0.4,0.3,0.7,0.3c0.2,0,0.5-0.1,0.7-0.3
-                           L28.2,3c0.2-0.2,0.3-0.4,0.3-0.7C28.5,2.1,28.4,1.9,28.2,1.7z" />
-                  </svg>
                </div>
                <div class="container">
                   <div class="drop-bar" onclick="toggle('drop-3')">Виключення при некоректній авторизації</div>
@@ -75,12 +63,6 @@
             <div class="drop-out">
                <div class="drop-down">
                   <p>Впровадження ПЗ</p>
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                     width="25" viewBox="0 0 32 32">
-                     <path class="svg" d="M28.2,1.7l-1.4-1.4C26.6,0.1,26.4,0,26.1,0c-0.2,0-0.5,0.1-0.7,0.3L14.2,11.5L3,0.3C2.8,0.1,2.6,0,2.4,0
-                           C2.1,0,1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.1,0,2.4C0,2.6,0.1,2.8,0.3,3l13.3,13.3c0.2,0.2,0.4,0.3,0.7,0.3c0.2,0,0.5-0.1,0.7-0.3
-                           L28.2,3c0.2-0.2,0.3-0.4,0.3-0.7C28.5,2.1,28.4,1.9,28.2,1.7z" />
-                  </svg>
                </div>
                <div class="container">
                   <div class="drop-bar" onclick="toggle('drop-7')">Папка з проектом</div>
@@ -144,27 +126,27 @@
          </div>
          <div class="content-window" id="drop-3">
             <div class="text">
-               drop-3
+               Виключення при некоректній авторизації
             </div>
          </div>
          <div class="content-window" id="drop-4">
             <div class="text">
-               drop-4
+               Фільтри виключень
             </div>
          </div>
          <div class="content-window" id="drop-5">
             <div class="text">
-               drop-5
+               Виключення при обробці масивів
             </div>
          </div>
          <div class="content-window" id="drop-6">
             <div class="text">
-               drop-6               
+               Системні виключення              
             </div>
          </div>
          <div class="content-window" id="drop-9">
             <div class="text">
-               drop-9               
+               Власні виключення            
             </div>
          </div>
          <div class="content-window" id="drop-7">
