--- a/lab6/index.html
+++ b/lab6/index.html
@@ -58,8 +58,7 @@
                   <div class="drop-bar" onclick="toggle('drop-3')">Класи-делегати</div>
                   <div class="drop-bar" onclick="toggle('drop-4')">Події</div>
                   <div class="drop-bar" onclick="toggle('drop-5')">Анонімні методи</div>
-                  <div class="drop-bar" onclick="toggle('drop-6')">Лямбда-оператори</div>	  
-                  <div class="drop-bar" onclick="toggle('drop-9')">Лямбда-вирази</div>	  
+                  <div class="drop-bar" onclick="toggle('drop-6')">Лямбда-оператори та Лямбда-вирази</div>	   
                </div>
             </div>
             <div class="drop-out">
@@ -140,16 +139,15 @@
          <div class="content-window" id="drop-5">
             <div class="text">
                Анонімні методи
+               <img src="sources/img/anonim.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-6">
             <div class="text">
-               Лямбда-оператори
-            </div>
-         </div>
-         <div class="content-window" id="drop-9">
-            <div class="text">
-               Лямбда-вирази
+               Лямбда-оператори та Лямбда-вирази
+               <img src="sources/img/lambda1.jpg" alt="">
+               <img src="sources/img/lambda2.jpg" alt="">
+               <img src="sources/img/lambda3.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-7">
