--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          <div class="name"> 
             <p>Амброзяк Христина Андріївна</p>
             <p>Студентка 2-го курсу ФІОТ</p>
-            <p>Розробник .NET</p>
+            <p>.NET engineer</p>
          </div>
       </div>
       <div class="portfolio">
