--- a/lab7/index.html
+++ b/lab7/index.html
@@ -114,11 +114,6 @@
          		</p>
             </div>
          </div>
-         <div class="content-window" id="drop-1">
-            <div class="text">
-              <p>drop-1</p>
-            </div>
-         </div>
          <div class="content-window" id="drop-2">
             <div class="text">
                <img src="sources/img/uml-diag.jpg" alt="">
@@ -127,26 +122,35 @@
          <div class="content-window" id="drop-3">
             <div class="text">
                Виключення при некоректній авторизації
+               <img src="sources/img/custom_expt_code.jpg" alt="">
+               <img src="sources/img/custom_expt_code2.jpg" alt="">    
             </div>
          </div>
          <div class="content-window" id="drop-4">
             <div class="text">
                Фільтри виключень
+               <img src="sources/img/filter_expt_code.jpg" alt="">
+               <img src="sources/img/filter_expt_output1.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-5">
             <div class="text">
-               Виключення при обробці масивів
+               <img src="sources/img/arr_expt_code.jpg" alt="">
+               <img src="sources/img/arr_expt_output.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-6">
             <div class="text">
-               Системні виключення              
+               Системні виключення 
+               <img src="sources/img/system_expt_code.jpg" alt="">
+               <img src="sources/img/system_expt_output1.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-9">
             <div class="text">
-               Власні виключення            
+               <img src="sources/img/custom_expt_code.jpg" alt="">
+               <img src="sources/img/custom_expt_code2.jpg" alt="">    
+               <img src="sources/img/custom_expt_output.jpg" alt="">           
             </div>
          </div>
          <div class="content-window" id="drop-7">
