--- a/lab8/index.html
+++ b/lab8/index.html
@@ -40,7 +40,7 @@
             <div class="menu-item" onclick="toggle('tab-1')">Постановка задачі Лабораторної №8</div>
             <div class="menu-item" onclick="toggle('total')">Висновок</div>
             <div class="drop-out">
-               <div class="drop-down">
+               <div class="drop-down" style="display: none;">
                   <p>Проектування структури ПЗ</p>
                </div>
                <div class="container">
