--- a/lab8/index.html
+++ b/lab8/index.html
@@ -56,7 +56,7 @@
                   <div class="drop-bar" onclick="toggle('drop-3')">Завдання 4.1</div>
                   <div class="drop-bar" onclick="toggle('drop-4')">Завдання 4.2</div>
                   <div class="drop-bar" onclick="toggle('drop-5')">Завдання 4.3</div>
-		            <div class="drop-bar" onclick="toggle('drop-6')">Завдання 4.4</div> 
+		  <div class="drop-bar" onclick="toggle('drop-6')">Завдання 4.4</div> 
                </div>
             </div>
             <div class="drop-out">
@@ -113,14 +113,17 @@
          </div>
          <div class="content-window" id="drop-4">
             <div class="text">
+               <img src="sources/img/task4_2.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-5">
             <div class="text">
+               <img src="sources/img/task4_3.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-6">
             <div class="text">
+               <img src="sources/img/task4_4.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-7">
