--- a/lab8/index.html
+++ b/lab8/index.html
@@ -118,7 +118,8 @@
          </div>
          <div class="content-window" id="drop-5">
             <div class="text">
-               <img src="sources/img/task4_3.jpg" alt="">
+               <img src="sources/img/task4_3_1.jpg" alt="">
+	       <img src="sources/img/task4_3_2.jpg" alt="">
             </div>
          </div>
          <div class="content-window" id="drop-6">
@@ -137,6 +138,9 @@
 	 <div class="content-window" id="drop-8">
             <div class="text">
                <img src="sources/img/exe1.jpg" alt="">
+	       <img src="sources/img/exe2.jpg" alt="">
+	       <img src="sources/img/exe3.jpg" alt="">
+	       <img src="sources/img/exe4.jpg" alt="">
                <a href="project/project1.exe" download="">Завантажити Project1.exe</a>
             </div>
          </div>
